<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.pizzalinequiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/question"
            android:text="@string/introduction" />


        <View style="@style/divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question1"
                style="@style/question"
                android:text="@string/question1" />


            <CheckBox
                android:id="@+id/checkBox1a"
                style="@style/check_box"
                android:layout_below="@id/question1"
                android:text="@string/answer1a" />

            <CheckBox
                android:id="@+id/checkBox1b"
                style="@style/check_box"
                android:layout_below="@id/question1"
                android:layout_toEndOf="@id/checkBox1a"
                android:text="@string/answer1b" />
            <CheckBox
                android:id="@+id/checkBox1c"
                style="@style/check_box"
                android:layout_below="@id/checkBox1a"
                android:text="@string/answer1c" />

            <CheckBox
                android:id="@+id/checkBox1d"
                style="@style/check_box"
                android:layout_below="@id/checkBox1b"
                android:layout_toEndOf="@id/checkBox1c"
                android:text="@string/answer1d" />

        </RelativeLayout>


        <View style="@style/divider" />
        <!-- there must be a better way than copy/pasting huge stacks of these exact same things... -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question2"
                style="@style/question"
                android:text="@string/question2" />

            <CheckBox
                android:id="@+id/checkBox2a"
                style="@style/check_box"
                android:layout_below="@id/question2"
                android:text="@string/answer2a" />
            <CheckBox
                android:id="@+id/checkBox2b"
                style="@style/check_box"
                android:layout_below="@id/question2"
                android:layout_toEndOf="@id/checkBox2a"
                android:text="@string/answer2b" />
            <CheckBox
                android:id="@+id/checkBox2c"
                style="@style/check_box"
                android:layout_below="@id/checkBox2a"
                android:text="@string/answer2c" />
            <CheckBox
                android:id="@+id/checkBox2d"
                style="@style/check_box"
                android:layout_below="@id/checkBox2b"
                android:layout_toEndOf="@id/checkBox2c"
                android:text="@string/answer2d" />

        </RelativeLayout>


        <View style="@style/divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/question3"
                style="@style/question"
                android:text="@string/question3" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question3">

                <RadioButton
                    style="@style/check_box"
                    android:text="@string/answer3a" />

                <RadioButton
                    style="@style/check_box"
                    android:text="@string/answer3b" />

                <RadioButton
                    style="@style/check_box"
                    android:text="@string/answer3c" />

                <RadioButton
                    android:id="@+id/radio3"
                    style="@style/check_box"
                    android:text="@string/answer3d" />

            </RadioGroup>
        </RelativeLayout>

        <View style="@style/divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question4"
                style="@style/question"
                android:text="@string/question4" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question4">

                <RadioButton
                    android:id="@+id/radio4"
                    style="@style/check_box"
                    android:text="@string/answer4a" />

                <RadioButton
                    style="@style/check_box"
                    android:text="@string/answer4b" />

                <RadioButton
                    style="@style/check_box"
                    android:text="@string/answer4c" />

                <RadioButton
                    style="@style/check_box"
                    android:text="@string/answer4d" />

            </RadioGroup>
        </RelativeLayout>

        <View style="@style/divider" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/question5"
                style="@style/question"
                android:text="@string/question5" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question5">

                <RadioButton
                    style="@style/check_box"
                    android:text="@string/answer5a" />

                <RadioButton
                    style="@style/check_box"
                    android:text="@string/answer5b" />

                <RadioButton
                    android:id="@+id/radio5"
                    style="@style/check_box"
                    android:text="@string/answer5c" />

                <RadioButton
                    style="@style/check_box"
                    android:text="@string/answer5d" />

            </RadioGroup>
        </RelativeLayout>

        <View style="@style/divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question6"
                style="@style/question"
                android:text="@string/question6" />

            <CheckBox

                android:id="@+id/checkBox6a"
                style="@style/check_box"
                android:layout_below="@id/question6"
                android:text="@string/answer6a" />

            <CheckBox
                android:id="@+id/checkBox6b"
                style="@style/check_box"
                android:layout_below="@id/question6"
                android:layout_toEndOf="@id/checkBox6a"
                android:text="@string/answer6b" />

            <CheckBox
                android:id="@+id/checkBox6c"
                style="@style/check_box"
                android:layout_below="@id/checkBox6a"
                android:text="@string/answer6c" />

            <CheckBox
                android:id="@+id/checkBox6d"
                style="@style/check_box"
                android:layout_below="@id/checkBox6b"
                android:layout_toEndOf="@id/checkBox6c"
                android:text="@string/answer6d" />

        </RelativeLayout>

        <View style="@style/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/question"
                android:text="@string/question7" />

            <EditText
                android:id="@+id/etAnswer7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint1" />

        </LinearLayout>

        <View style="@style/divider" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitScore"
                android:text="@string/submit" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>
